Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 html {
-    background: url('images/pink-tulips-on-wood-texture_4460x4460.jpg') no-repeat center center fixed;
+    background: url('images/rainy_leaf.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -37,8 +37,8 @@ a{
         background-size: auto;
         background-repeat: no-repeat;
         /* background-position: center; */
-        width: 100%;
+        width: auto;
         height: auto;
-        background-origin: border-box;
+        background-origin: none;
     }
 }
